fixed org sided css + display bugs squashed

--- a/styles/UserViewFiles.module.css
+++ b/styles/UserViewFiles.module.css
@@ -1,10 +1,10 @@
 .UserHomeBody {
     background-color: black;
-    padding: 20px;
-    margin: 0;
+    /* padding: 20px; */
+    /* margin: 0; */
     font-size: 14px;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
 }
 
 
@@ -30,7 +30,7 @@
     align-items: center;
     justify-content: center;
     min-width: 100%;
-    height: 15vh;
+    height: 110px;
     flex-wrap: wrap;
     gap: 2.5rem;
     padding-bottom: 2rem;
@@ -87,4 +87,17 @@
 .addFileButton:hover {
     background-color: white;
     color: black;
+}
+
+
+.centerDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+}
+
+.buttonsDivOrg {
+    height: 80px;
 }
