--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,20 @@
   box-sizing: border-box;
 }
 
+
+
 */
+
+[data-overlay-container] {
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    /* padding-left: 30px; */
+    /* gap: 20px; */
+    background-color: black;
+    height: 100%;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
