--- a/styles/sendfile.module.css
+++ b/styles/sendfile.module.css
@@ -1,386 +1,176 @@
 .container {
-
-    padding-top: 100px;
-
+    /* padding-top: 100px; */
     display: flex;
-
     flex-direction: column;
-
     padding-left: 30px;
-
     gap: 20px;
-
+    background-color: black;
+    height: 100%;
 }
-
-
-
-
-
-
 
 .titleText {
-
     font-size: 1.5rem;
-
     font-weight: 700;
-
     color: #ffffff;
-
     text-decoration: none;
-
 }
-
-
-
 
 .orgInfoLine {
-
     display: flex;
-
     flex-direction: row;
-
     width: 80%;
-
     justify-content: space-between;
-
 }
-
-
-
 
 .orgCodeInput {
-
     width: 30%;
-
     height: 100%;
-
 }
-
-
-
 
 .orgCodeInput > input {
-
     width: 100%;
-
     background-color: white;
-
     border-radius: 10px;
-
-    padding: 8px 0;
-
+    padding: 8px 15px;
 }
-
-.orgCodeInput > input::placeholder {
-
-    padding-left: 15px;
-
-}
-
-
-
 
 .orgNameInput {
-
     width: 68%;
-
     height: 100%;
-
 }
-
-
-
 
 .orgNameInput > input {
-
     width: 100%;
-
     background-color: white;
-
     border-radius: 10px;
-
-    padding: 8px 0;
-
+    padding: 8px 15px;
 }
-
-.orgNameInput > input::placeholder {
-
-    padding-left: 15px;
-
-}
-
-
 
 
 .fileTitleLine {
-
     display: flex;
-
     flex-direction: row;
-
     width: 80%;
-
     justify-content: flex-start;
-
 }
-
-
-
 
 .fileTitleLine > input {
-
     width: 100%;
-
     background-color: white;
-
     border-radius: 10px;
-
-    padding: 8px 0;
-
+    padding: 8px 15px;
 }
-
-.fileTitleLine > input::placeholder {
-
-    padding-left: 15px;
-
-}
-
-
-
 
 .fileDescLine {
-
     display: flex;
-
     flex-direction: row;
-
     width: 80%;
-
     justify-content: flex-start;
-
 }
-
-
-
 
 .fileDescLine > textarea {
-
     min-width: 100%;
-
     background-color: white;
-
     border-radius: 10px;
-
-    padding: 8px 0;
-
+    padding: 8px 15px;
 }
-
-
-
-
-.fileDescLine > textarea::placeholder {
-
-    padding-left: 15px;
-
-}
-
-
-
 
 .accessLine {
-
     display: flex;
-
     flex-direction: row;
-
     width: 80%;
-
     justify-content: space-between;
-
 }
-
-
-
 
 .accessTypeDropDown {
-
     display: flex;
-
     flex-direction: row;
-
     width: 50%;
-
     justify-content: flex-start;
-
     align-items: center;
-
     gap: 40px;
-
 }
-
-
-
 
 .accessTypeDropDown > select {
-
     width: 30%;
-
     background-color: white;
-
     border-radius: 10px;
-
     padding: 8px 0;
-
     color: black;
-
 }
-
-
-
 
 .accessDurationDropDown {
-
     display: flex;
-
     flex-direction: row;
-
     width: 50%;
-
     justify-content: flex-start;
-
     align-items: center;
-
     gap: 40px;
-
+    color: white;
 }
-
-
-
 
 .accessDurationDropDown > select {
-
     width: 30%;
-
     background-color: white;
-
     border-radius: 10px;
-
     padding: 8px 0;
-
     color: black;
-
 }
-
-
-
-
-
-
 
 .fileSelectionLine {
-
     color: #fff;
-
     width: 80%;
-
 }
-
-
-
 
 .buttonsDiv {
-
     display: flex;
-
     flex-direction: row;
-
     width: 80%;
-
     justify-content: space-between;
-
     margin-bottom: 50px;
-
 }
 
-
-
-
 .sendButton {
-
     width: 30%;
-
     height: 100%;
-
     background-color: #ffffff;
-
     color: black;
-
     padding: 1rem;
-
     font-family: 'Roboto', sans-serif;
-
     display: flex;
-
     flex-direction: row;
-
     align-items: center;
-
     justify-content: center;
-
     border-radius: 0.5rem;
-
     font-weight: 500;
-
 }
 
 .sendButton:hover {
-
     background-color: #e6e6e6;
-
     cursor: pointer;
-
 }
-
-
-
 
 .clearButton {
-
     width: 30%;
-
     height: 100%;
-
     background-color: #ffffff;
-
     color: black;
-
     padding: 1rem;
-
     font-family: 'Roboto', sans-serif;
-
     display: flex;
-
     flex-direction: row;
-
     align-items: center;
-
     justify-content: center;
-
     border-radius: 0.5rem;
-
     color: red;
-
     font-weight: 500;
-
 }
 
-
-
-
 .clearButton:hover {
-
     background-color: #e6e6e6;
-
     cursor: pointer;
+}
 
+.accessTypeLabel {
+    color: white;
 }
